[gd_scene load_steps=3 format=3 uid="uid://90giut2ea2j4k"]

[ext_resource type="Script" path="res://algorithms/wfc/room_corridor_tileset.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://afpmtbmyih8am" path="res://algorithms/wfc/wfc_grid_3d.tscn" id="2"]

[node name="RoomCorridorTest" type="Node3D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 10, 12, 10)
current = true
fov = 75.0

[node name="WFCGrid3D" parent="." instance=ExtResource("2")]
grid_width = 16
grid_height = 1
grid_depth = 16
tile_size = 2.0
auto_generate = false
animate_generation = true
animation_speed = 0.02

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 20, 0)
light_color = Color(1, 0.95, 0.9, 1)
light_energy = 1.3
shadow_enabled = true

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.5, -0.75, -0.433013, 0, 0.5, -0.866025, 0.866025, -0.433013, -0.25, 0, 15, 0)
light_color = Color(0.6, 0.7, 1, 1)
light_energy = 0.5

[connection signal="generation_complete" from="WFCGrid3D" to="." method="_on_generation_complete"]
[connection signal="generation_started" from="WFCGrid3D" to="." method="_on_generation_started"]
